[package]
name = "memory-cache-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.13.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
libmath ="0.2.1"
rand = "0.8.5"
aes-prng = "0.2.0"
seahash ="4.1.0"