[package]
authors = ["Behrouz <behrouz.r.fa@gmail.com>"]
name = "memory-cache-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
homepage = "https://github.com/behrouz-rfa/memory-cache-rust"
repository = "https://github.com/behrouz-rfa/memory-cache-rust"
documentation = "https://github.com/behrouz-rfa/memory-cache-rust"

description = """
memory-cache is a fast, concurrent cache library built with a focus on performance and correctness.
The motivation to build Ristretto comes from the need for a contention-free cache in
"""
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.13.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
libmath ="0.2.1"
rand = "0.8.5"
aes-prng = "0.2.0"
seahash ="4.1.0"
crossbeam="0.8.2"
crossbeam-channel = "0.5.6"
parking_lot = "0.12.1"

syncpool = "0.1.6"
[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]
